# LDM-GBM-prediction

./: .gitignore  README.md  pyproject.toml  run.py
config/ldm/: image_2_image_noisy_src.yaml  image_2_image_noisy_src_free_guidance_2c_classifier.yaml  image_2_image_noisy_src_free_guidance_2c_real_classifier.yaml  image_2_image_noisy_src_free_guidance_4c_classifier.yaml  image_2_image_src_free_guidance_2c_classifier.yaml  image_2_image_src_free_guidance_2c_real_classifier.yaml  image_2_image_src_free_guidance_4c_classifier.yaml  image_2_image_src_no_classifier.yaml
config/vqgan/: vqgan.yaml  vqgan_512.yaml  vqgan_512_nodisc.yaml  vqgan_gtv_conditionner.yaml  vqgan_rt_dose_conditionner.yaml
data/: MRIDataModule.py  MRI_Dataset.py  __init__.py
models/ldm_stable/models/: autoencoder.py
models/ldm_stable/models/diffusion/: ddim.py  ddpm.py
models/ldm_stable/modules/: attention.py
models/ldm_stable/modules/diffusionmodules/: model.py  openaimodel.py  util.py
models/ldm_stable/modules/encoders/: modules.py
models/taming/models/: cond_transformer.py  vqgan.py
models/taming/modules/diffusionmodules/: model.py
models/taming/modules/discriminator/: model.py
models/taming/modules/losses/: lpips.py  vqperceptual.py
models/taming/modules/vqvae/: quantize.py
utils/: autoloading.py  callbacks.py  compute_latent_std.py  metrics.py
